# one

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
.docs/: 2026-07-15-clean-refactor.md
.github/workflows/: ci.yml
clients/: .gitignore
clients/android/: README.md  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/browser/: README.md  background.js  manifest.json  popup.html  popup.js
clients/tauri/: Cargo.toml  config.example.json  package-lock.json  package.json  tauri.conf.json
clients/tauri/capabilities/: default.json
clients/tauri/icons/: icon.icns
clients/tauri/src/: main.rs
clients/tauri/src/apps/: chat.rs  computer.rs  files.rs  mod.rs  status.rs  terminal.rs
clients/tauri/src/system/: config.rs  connection.rs  dispatch.rs  mod.rs
clients/tauri/web/: index.html
worker/: package-lock.json  package.json  schema.sql  wrangler.example.jsonc
worker/seeds/: apps.sql  build.mjs
worker/seeds/insight/: index.css  index.html  index.js  index.sql
worker/seeds/love/: index.css  index.html  index.js  index.sql
worker/seeds/notes/: index.css  index.html  index.js  index.sql
worker/seeds/todo/: index.css  index.html  index.js  index.sql
worker/server/: index.js
worker/server/apps/: index.js  registry.js
worker/server/system/: downloads.js  settings.js
worker/test/: cron.test.js  protocol.test.js  sql.test.js
worker/ui/: App.vue  index.html  main.js  package-lock.json  package.json  router.js  style.css  vite.config.js
worker/ui/system/: api.js
(+139 files in other folders)
