[package]
name = "one"
version = "0.1.0"
description = "one — local Mac AI assistant"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 本机执行臂(纯 Rust):WS 连 worker + shell/fs/status
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "sync", "fs"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
sysinfo = "0.30"
if-addrs = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.2"           # 坐标点击(视觉定位后点 x,y;AX 按名点仍走 osascript)

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
